--- a/landen/vulkan_land_landen.vcxproj.filters
+++ b/landen/vulkan_land_landen.vcxproj.filters
@@ -46,16 +46,10 @@
     <ClCompile Include="vulkan\VulkanDevice.cpp">
       <Filter>Source Files\vulkan</Filter>
     </ClCompile>
-    <ClCompile Include="vulkan\vulkan_example_base.cpp">
-      <Filter>Source Files\vulkan</Filter>
-    </ClCompile>
     <ClCompile Include="vulkan\VulkanglTFModel.cpp">
       <Filter>Source Files\vulkan</Filter>
     </ClCompile>
     <ClCompile Include="vulkan\VulkanRaytracingSample.cpp">
-      <Filter>Source Files\vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="vulkan\VulkanSwapChain.cpp">
       <Filter>Source Files\vulkan</Filter>
     </ClCompile>
     <ClCompile Include="vulkan\VulkanTexture.cpp">
@@ -67,13 +61,7 @@
     <ClCompile Include="vulkan\VulkanUIOverlay.cpp">
       <Filter>Source Files\vulkan</Filter>
     </ClCompile>
-    <ClCompile Include="vulkan\offscreen2.cpp">
-      <Filter>Source Files\vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="vulkan\render_headless.cpp">
-      <Filter>Source Files\vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="vulkan\offscreen20.cpp">
+    <ClCompile Include="vulkan\VulkanExampleRenderHeadless.cpp">
       <Filter>Source Files\vulkan</Filter>
     </ClCompile>
     <ClCompile Include="vulkan\vulkan_example_base_no_swap_chain.cpp">
@@ -83,6 +71,15 @@
       <Filter>Source Files\vulkan</Filter>
     </ClCompile>
     <ClCompile Include="vulkan\vk_container.cpp">
+      <Filter>Source Files\vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="vulkan\vulkan_example_base_with_swap_chain.cpp">
+      <Filter>Source Files\vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="vulkan\VulkanAndroid.cpp">
+      <Filter>Source Files\vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="vulkan\VulkanSwapChain.cpp">
       <Filter>Source Files\vulkan</Filter>
     </ClCompile>
   </ItemGroup>
@@ -141,9 +138,6 @@
     <ClInclude Include="vulkan\VulkanBuffer.h">
       <Filter>Header Files\vulkan</Filter>
     </ClInclude>
-    <ClInclude Include="vulkan\vulkan_example_base.h">
-      <Filter>Header Files\vulkan</Filter>
-    </ClInclude>
     <ClInclude Include="vulkan\VulkanglTFModel.h">
       <Filter>Header Files\vulkan</Filter>
     </ClInclude>
@@ -180,16 +174,10 @@
     <ClInclude Include="vulkan\VulkanInitializers.hpp">
       <Filter>Header Files\vulkan</Filter>
     </ClInclude>
-    <ClInclude Include="vulkan\offscreen2.h">
-      <Filter>Header Files\vulkan</Filter>
-    </ClInclude>
     <ClInclude Include="vulkan\shared.h">
       <Filter>Header Files\vulkan</Filter>
     </ClInclude>
-    <ClInclude Include="vulkan\render_headless.h">
-      <Filter>Header Files\vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="vulkan\offscreen20.h">
+    <ClInclude Include="vulkan\VulkanExampleRenderHeadless.h">
       <Filter>Header Files\vulkan</Filter>
     </ClInclude>
     <ClInclude Include="vulkan\vulkan_example_base_no_swap_chain.h">
@@ -199,6 +187,9 @@
       <Filter>Header Files\vulkan</Filter>
     </ClInclude>
     <ClInclude Include="vulkan\vk_container.h">
+      <Filter>Header Files\vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="vulkan\vulkan_example_base_with_swap_chain.h">
       <Filter>Header Files\vulkan</Filter>
     </ClInclude>
   </ItemGroup>
