<3TbsJegElskerDig!! 🌌🌍 [ MyPlace2025 : A OpenGL App ] [ day 6 ] [ C++ ] MyPlace2025 : a opengl app at Windows <3TbsJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi : Thank you!! Keeping things tidy, keeping things clean, keep ca2 build clean, what's that error camilo... !!

Mummi : Thank you!! Release to the client, he is waiting!! Don't make him wait!! Attend well the client like he were a king!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

V0idsEmbrace contribution while assisting to code graphics3d (protos vulkan-land and opengl-land)!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

MrShoor (from Russia) streaming C++ coding contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

Sovereig

--- a/landen/vulkan_land_landen.vcxproj
+++ b/landen/vulkan_land_landen.vcxproj
@@ -739,7 +739,7 @@
     </ClCompile>
     <ClCompile Include="impact.cpp" />
     <ClCompile Include="vulkan\application.cpp" />
-    <ClCompile Include="vulkan\VulkanOffscreenApplication.cpp" />
+    <ClCompile Include="vulkan\offscreen_application.cpp" />
     <ClInclude Include="vulkan\benchmark.hpp" />
     <ClInclude Include="vulkan\camera.hpp" />
     <ClInclude Include="vulkan\CommandLineParser.hpp" />
@@ -777,8 +777,8 @@
     <ClCompile Include="vulkan\VulkanTexture.cpp" />
     <ClCompile Include="vulkan\VulkanTools.cpp" />
     <ClCompile Include="vulkan\VulkanUIOverlay.cpp" />
-    <ClCompile Include="vulkan\VulkanBaseApplicationNoSwapChain.cpp" />
-    <ClCompile Include="vulkan\VulkanBaseApplicationWithSwapChain.cpp" />
+    <ClCompile Include="vulkan\base_application_no_swap_chain.cpp" />
+    <ClCompile Include="vulkan\base_application_with_swap_chain.cpp" />
     <ClCompile Include="_.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -786,9 +786,9 @@
     <ClInclude Include="document.h" />
     <ClInclude Include="frame.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="vulkan\VulkanOffscreenApplication.h" />
-    <ClInclude Include="vulkan\VulkanBaseApplicationNoSwapChain.h" />
-    <ClInclude Include="vulkan\VulkanBaseApplicationWithSwapChain.h" />
+    <ClInclude Include="vulkan\offscreen_application.h" />
+    <ClInclude Include="vulkan\base_application_no_swap_chain.h" />
+    <ClInclude Include="vulkan\base_application_with_swap_chain.h" />
     <ClInclude Include="_.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="impact.h" />
