<3TbsJegElskerDig!! 🌌🌍 [ vulkan-land : landen and continuum(by V0idsEmbrace) apps ] [ day 7 ] [ C++ ] vulkan-land : landen and continuum(by V0idsEmbrace) apps <3TbsJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi : Thank you!! Keeping things tidy, keeping things clean, keep ca2 build clean, what's that error camilo... !!

Mummi : Thank you!! Release to the client, he is waiting!! Don't make him wait!! Attend well the client like he were a king!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

V0idsEmbrace contribution while assisting to code graphics3d (protos vulkan-land and opengl-land)!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

MrShoor (from Russia) streaming C++ coding contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from De

--- a/landen/vulkan_land_landen.vcxproj
+++ b/landen/vulkan_land_landen.vcxproj
@@ -740,41 +740,39 @@
     <ClCompile Include="impact.cpp" />
     <ClCompile Include="vulkan\application.cpp" />
     <ClCompile Include="vulkan\offscreen_application.cpp" />
-    <ClInclude Include="vulkan\benchmark.hpp" />
-    <ClInclude Include="vulkan\camera.hpp" />
-    <ClInclude Include="vulkan\CommandLineParser.hpp" />
-    <ClInclude Include="vulkan\Entrypoints.h" />
-    <ClInclude Include="vulkan\frustum.hpp" />
+    <ClInclude Include="vulkan\benchmark.h" />
+    <ClInclude Include="vulkan\camera.h" />
+    <ClInclude Include="vulkan\command_line_parser.h" />
+    <ClInclude Include="vulkan\frustum.h" />
     <ClInclude Include="vulkan\keycodes.h" />
-    <ClInclude Include="vulkan\keycodes.hpp" />
     <ClInclude Include="vulkan\application.h" />
-    <ClInclude Include="vulkan\VulkanExampleRenderHeadless.h" />
+    <ClInclude Include="vulkan\headless_rendering_application.h" />
     <ClInclude Include="vulkan\shared.h" />
-    <ClInclude Include="vulkan\threadpool.hpp" />
+    <ClInclude Include="vulkan\threadpool.h" />
     <ClInclude Include="vulkan\vk_container.h" />
-    <ClInclude Include="vulkan\VulkanAndroid.h" />
+    <ClInclude Include="vulkan\android.h" />
     <ClInclude Include="vulkan\buffer.h" />
-    <ClInclude Include="vulkan\VulkanDebug.h" />
+    <ClInclude Include="vulkan\debug.h" />
     <ClInclude Include="Vulkan\device.h" />
-    <ClInclude Include="vulkan\VulkanFrameBuffer.hpp" />
-    <ClInclude Include="vulkan\VulkanglTFModel.h" />
-    <ClInclude Include="vulkan\VulkanRaytracingSample.h" />
+    <ClInclude Include="vulkan\frame_buffer.h" />
+    <ClInclude Include="vulkan\gltf_model.h" />
+    <ClInclude Include="vulkan\raytracing_application.h" />
     <ClInclude Include="vulkan\swap_chain.h" />
     <ClInclude Include="vulkan\texture.h" />
-    <ClInclude Include="vulkan\VulkanTools.h" />
+    <ClInclude Include="vulkan\tools.h" />
     <ClInclude Include="Vulkan\ui_overlay.h" />
-    <ClInclude Include="vulkan\VulkanInitializers.h" />
-    <ClCompile Include="vulkan\VulkanExampleRenderHeadless.cpp" />
+    <ClInclude Include="vulkan\initializers.h" />
+    <ClCompile Include="vulkan\headless_rendering_application.cpp" />
     <ClCompile Include="vulkan\vk_container.cpp" />
-    <ClCompile Include="vulkan\VulkanAndroid.cpp" />
+    <ClCompile Include="vulkan\android.cpp" />
     <ClCompile Include="vulkan\buffer.cpp" />
-    <ClCompile Include="vulkan\VulkanDebug.cpp" />
+    <ClCompile Include="vulkan\debug.cpp" />
     <ClCompile Include="vulkan\device.cpp" />
-    <ClCompile Include="vulkan\VulkanglTFModel.cpp" />
-    <ClCompile Include="vulkan\VulkanRaytracingSample.cpp" />
+    <ClCompile Include="vulkan\gltf_model.cpp" />
+    <ClCompile Include="vulkan\raytracing_application.cpp" />
     <ClCompile Include="vulkan\swap_chain.cpp" />
     <ClCompile Include="vulkan\texture.cpp" />
-    <ClCompile Include="vulkan\VulkanTools.cpp" />
+    <ClCompile Include="vulkan\tools.cpp" />
     <ClCompile Include="vulkan\ui_overlay.cpp" />
     <ClCompile Include="vulkan\base_application_no_swap_chain.cpp" />
     <ClCompile Include="vulkan\base_application_with_swap_chain.cpp" />
@@ -791,7 +789,7 @@
     <ClInclude Include="_.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="impact.h" />
-    <ClInclude Include="_user.h" />
+    <ClInclude Include="_vulkan.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\app\acme\acme.vcxproj">
